# AOf

./: README.md  pyproject.toml
app/: config.py  database.py  main.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  base.py  course.py  expense.py  maintenance_task.py  payment.py  queue.py  task.py  user.py
app/routers/: manager_routes.py  parent_routes.py  student_routes.py  teacher_routes.py  worker_routes.py
app/schemas/: __init__.py  course_schema.py  expense_schema.py  maintenance_schema.py  payment_schema.py  queue_schema.py  task_schema.py  user_schema.py
app/services/: __init__.py  auth_service.py  course_service.py  demo_user_service.py  enrollment_service.py  expense_service.py  financial_report_service.py  maintenance_service.py  payment_service.py  user_service.py
app/templates/: base.html  login.html
app/templates/manager/: course_queue_detail.html  courses.html  create_course.html  create_user.html  dashboard.html  expense_create.html  expenses.html  financial_report.html  maintenance.html  maintenance_create.html  queues.html  users.html
app/templates/parent/: children.html  dashboard.html  enroll.html  payment_create.html  payments.html  queue_detail.html
docs/ticket-01/: project-plan.md  ticket.md
docs/ticket-02/: PROJECT_PLAN.md  ticket.md
docs/ticket-03/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PROJECT_PLAN.md  README.md  REMAINING_IMPLEMENTATION_GUIDE.md  ticket.md
docs/ticket-04/: plane.md  ticket-04.md
scripts/: add_location_column.py  init_db.py  reset_db.py  seed_data.py
(+14 files in other folders)
