[project]
name = "academic-tomorrow"
version = "0.1.0"
description = "Learning Center Management System"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
    "bcrypt>=4.1.2",
    "itsdangerous>=2.2.0",
    "cryptography>=46.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
